fix: service unknown col gap

--- a/index.sass
+++ b/index.sass
@@ -126,7 +126,7 @@ main
             @include rwd-md
                 margin-bottom: 10px
             @include rwd-sm
-                margin: 0
+                margin: 0 35px 0 0
         h3
             color: #DBDE94
             font-size: 16px
